--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@tailwindcss/typography": "^0.5.16",
+    "@types/exif-js": "^2.3.1",
     "buffer": "^6.0.3",
+    "exif-js": "^2.3.0",
     "framer-motion": "^11.0.0",
     "gray-matter": "^4.0.3",
     "path-browserify": "^1.0.1",
