--- a/package.json
+++ b/package.json
@@ -33,9 +33,11 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "postcss": "^8.4.35",
+    "sharp": "^0.34.3",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.2.2",
     "typescript-eslint": "^8.35.0",
-    "vite": "^5.1.0"
+    "vite": "^5.1.0",
+    "vite-plugin-image-optimizer": "^2.0.2"
   }
 }
