--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
+    "extract-photo-dates": "node scripts/extract-photo-dates.js",
+    "dev": "npm run extract-photo-dates && vite",
+    "build": "npm run extract-photo-dates && tsc && vite build",
     "lint": "eslint . --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
@@ -32,6 +33,7 @@
     "eslint": "^8.56.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "exifr": "^7.1.3",
     "postcss": "^8.4.35",
     "sharp": "^0.34.3",
     "tailwindcss": "^3.4.1",
